Fix CSS responsive and Toggle

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<div>
-				<h1><img class="logo" src="/assets/img/logo.png" alt=""></h1>
+			<div class="logo">
+				<h1><a href="/index.html"><img class="logo-img" src="/assets/img/logo.png" alt=""></a></h1>
 
 				<nav id="nav">
 					<ul>
@@ -46,8 +46,12 @@
 					</ul>
 				</nav>
 			</div>
-		</header>
-		<!-- CAROUSEL -->
+		</header>		
+		<!-- END CAROUSEL -->
+
+		<!-- Banner -->
+		<section id="banner">
+			<!-- CAROUSEL -->
 		<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
@@ -71,12 +75,7 @@
 				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
-<!-- END CAROUSEL -->
-
-		<!-- Banner -->
-		<!-- <section id="banner">
-
-		</section> -->
+		</section>
 
 		<!-- Main -->
 
