Fix CSS index page

--- a/index.html
+++ b/index.html
@@ -46,133 +46,94 @@
 					</ul>
 				</nav>
 			</div>
-		</header>		
+		</header>
 		<!-- END CAROUSEL -->
 
 		<!-- Banner -->
 		<section id="banner">
 			<!-- CAROUSEL -->
-		<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="/assets/img/Blue-And-Green-Galaxy-With-Stars.jpg" class="d-block w-100" alt="...">
+			<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img src="/assets/img/Blue-And-Green-Galaxy-With-Stars.jpg" class="d-block w-100" alt="...">
+					</div>
+					<div class="carousel-item">
+						<img src="/assets/img/Learning-How-To-Do-Flatlays.jpg" class="d-block w-100" alt="...">
+					</div>
+					<div class="carousel-item">
+						<img src="/assets/img/Painted-Skies.jpg" class="d-block w-100" alt="...">
+					</div>
 				</div>
-				<div class="carousel-item">
-					<img src="/assets/img/Learning-How-To-Do-Flatlays.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="/assets/img/Painted-Skies.jpg" class="d-block w-100" alt="...">
-				</div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+					data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+					data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
 			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-				data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-				data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
-		</div>
 		</section>
 
 		<!-- Main -->
 
 		<section class="box special features">
-			<div class="features-row">
+
+			<div class="box">
+				<span class="image featured"><img src="/assets/img/Painted-Skies.jpg" alt="" /></span>
+				<h3>This is a subheading</h3>
+				<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non
+					blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet
+					interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante
+					accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan
+					tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan
+					adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis
+					praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu
+					aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.
+				</p>
+				<div class="row">
+					<div class="row-6 row-12-mobilep">
+						<h3>And now a subheading</h3>
+						<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc
+							integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim
+							laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis
+							praesent.</p>
+					</div>
+					<div class="row-6 row-12-mobilep">
+						<h3>And another subheading</h3>
+						<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc
+							integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim
+							laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis
+							praesent.</p>
+					</div>
+				</div>
+			</div>
+			<!-- <div class="features-row">
 				<section>
+					<img src="/assets/img/Painted-Skies.jpg" alt="">
 					<span class="icon solid major fa-bolt accent2"></span>
 					<h3>Magna etiam</h3>
 					<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
 						iaculis accumsan dolore magna aliquam veroeros.</p>
 				</section>
-				<section>
-					<span class="icon solid major fa-chart-area accent3"></span>
-					<h3>Ipsum dolor</h3>
-					<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
-						iaculis accumsan dolore magna aliquam veroeros.</p>
-				</section>
-			</div>
-			<div class="features-row">
-				<section>
-					<span class="icon solid major fa-cloud accent4"></span>
-					<h3>Sed feugiat</h3>
-					<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
-						iaculis accumsan dolore magna aliquam veroeros.</p>
-				</section>
-				<section>
-					<span class="icon solid major fa-lock accent5"></span>
-					<h3>Enim phasellus</h3>
-					<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
-						iaculis accumsan dolore magna aliquam veroeros.</p>
-				</section>
-			</div>
-		</section>
-
-		<div class="row">
-			<div class="col-6 col-12-narrower">
-
-				<section class="box special">
-					<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-					<h3>Sed lorem adipiscing</h3>
-					<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
-						iaculis accumsan dolore magna aliquam veroeros.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button alt">Learn More</a></li>
-					</ul>
-				</section>
-
-			</div>
-			<div class="col-6 col-12-narrower">
-
-				<section class="box special">
-					<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-					<h3>Accumsan integer</h3>
-					<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
-						iaculis accumsan dolore magna aliquam veroeros.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button alt">Learn More</a></li>
-					</ul>
-				</section>
-
-			</div>
-		</div>
-
-		</section>
-
-		<!-- CTA -->
-		<section id="cta">
-
-			<h2>Sign up for beta access</h2>
-			<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
-
-			<form>
-				<div class="row gtr-50 gtr-uniform">
-					<div class="col-8 col-12-mobilep">
-						<input type="email" name="email" id="email" placeholder="Email Address" />
-					</div>
-					<div class="col-4 col-12-mobilep">
-						<input type="submit" value="Sign Up" class="fit" />
-					</div>
-				</div>
-			</form>
-
+			</div> -->
 		</section>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<ul class="icons">
+			<!-- <ul class="icons">
 				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 				<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 				<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-			</ul>
+			</ul> -->
 			<ul class="copyright">
 				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>Design: <a href="">GWS Tech</a></li>
 			</ul>
 		</footer>
 
