--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li>
+						<li><a href="ednatalia.html">Ed Natalia</a></li>
+						<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
+						<li><a href="elements.html">Elements</a></li>
+						<!-- <li>
 							<a href="#" class="icon solid fa-angle-down">Layouts</a>
 							<ul>
 								<li><a href="generic.html">Generic</a></li>
@@ -42,7 +45,7 @@
 									</ul>
 								</li>
 							</ul>
-						</li>
+						</li> -->
 					</ul>
 				</nav>
 			</div>
@@ -123,15 +126,7 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			<!-- <ul class="icons">
-				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-				<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-				<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-			</ul> -->
-			<ul class="copyright">
+				<ul class="copyright">
 				<li>&copy; Untitled. All rights reserved.</li>
 				<li>Design: <a href="">GWS Tech</a></li>
 			</ul>
