Add Saint James page

--- a/ednatalia.html
+++ b/ednatalia.html
@@ -26,7 +26,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="ednatalia.html">Ed Natalia</a></li>
 						<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="saintJames.html">Saint James</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -85,7 +85,6 @@
 								src="/assets/img/alta-4.jpg" alt="" />
 						</a>
 					</span>
-
 					<h3>Alta 4</h3>
 					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
 						non
