--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="ednatalia.html">Ed Natalia</a></li>
 						<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="saintJames.html">Saint James</a></li>
 						<!-- <li>
 							<a href="#" class="icon solid fa-angle-down">Layouts</a>
 							<ul>
