--- a/resSerraAlta.html
+++ b/resSerraAlta.html
@@ -26,7 +26,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="ednatalia.html">Ed Natalia</a></li>
 						<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="saintJames.html">Saint James</a></li>
 					</ul>
 				</nav>
 			</div>
