Fix navbar Saint James page

--- a/saintJames.html
+++ b/saintJames.html
@@ -25,7 +25,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="ednatalia.html">Ed Natalia</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
 						<li><a href="saintJames.html">Saint James</a></li>
 					</ul>
 				</nav>
