Fix place to assets css images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- Header -->
 		<header id="header" class="alt">
 			<div class="logo">
-				<h1><a href="/index.html"><img class="logo-img" src="/assets/img/logo.png" alt=""></a></h1>
+				<h1><a href="/index.html"><img class="logo-img" src="/assets/css/images/logo.png" alt=""></a></h1>
 
 				<nav id="nav">
 					<ul>
@@ -29,23 +29,6 @@
 						<li><a href="ednatalia.html">Ed Natalia</a></li>
 						<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
 						<li><a href="saintJames.html">Saint James</a></li>
-						<!-- <li>
-							<a href="#" class="icon solid fa-angle-down">Layouts</a>
-							<ul>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="contact.html">Contact</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li>
-									<a href="#">Submenu</a>
-									<ul>
-										<li><a href="#">Option One</a></li>
-										<li><a href="#">Option Two</a></li>
-										<li><a href="#">Option Three</a></li>
-										<li><a href="#">Option Four</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li> -->
 					</ul>
 				</nav>
 			</div>
@@ -58,13 +41,13 @@
 			<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="/assets/img/Blue-And-Green-Galaxy-With-Stars.jpg" class="d-block w-100" alt="...">
+						<img src="/assets/css/images/Blue-And-Green-Galaxy-With-Stars.jpg" class="d-block w-100" alt="...">
 					</div>
 					<div class="carousel-item">
-						<img src="/assets/img/Learning-How-To-Do-Flatlays.jpg" class="d-block w-100" alt="...">
+						<img src="/assets/css/images/Learning-How-To-Do-Flatlays.jpg" class="d-block w-100" alt="...">
 					</div>
 					<div class="carousel-item">
-						<img src="/assets/img/Painted-Skies.jpg" class="d-block w-100" alt="...">
+						<img src="/assets/css/images/Painted-Skies.jpg" class="d-block w-100" alt="...">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -85,7 +68,7 @@
 		<section class="box special features">
 
 			<div class="box">
-				<span class="image featured"><img src="/assets/img/Painted-Skies.jpg" alt="" /></span>
+				<span class="image featured"><img src="/assets/css/images/Painted-Skies.jpg" alt="" /></span>
 				<h3>This is a subheading</h3>
 				<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non
 					blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet
@@ -115,7 +98,7 @@
 			</div>
 			<!-- <div class="features-row">
 				<section>
-					<img src="/assets/img/Painted-Skies.jpg" alt="">
+					<img src="/assets/images/Painted-Skies.jpg" alt="">
 					<span class="icon solid major fa-bolt accent2"></span>
 					<h3>Magna etiam</h3>
 					<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
