Fix place images

--- a/ednatalia.html
+++ b/ednatalia.html
@@ -19,7 +19,7 @@
 		<!-- Header -->
 		<header id="header" class="alt">
 			<div class="logo">
-				<h1><a href="/index.html"><img class="logo-img" src="/assets/css/images/logo.png" alt=""></a></h1>
+				<h1><a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a></h1>
 
 				<nav id="nav">
 					<ul>
@@ -40,8 +40,8 @@
 			</header>
 			<div class="flex-box">
 				<div class="box">
-					<span class="image featured"><a href="/assets/css/images/Edificio Natalia.jpg" target="_blank"><img
-								src="/assets/css/images/Edificio Natalia.jpg" alt="" />
+					<span class="image featured"><a href="images/Edificio Natalia.jpg" target="_blank"><img
+								src="images/Edificio Natalia.jpg" alt="" />
 						</a>
 					</span>
 					<h3>Edificio Natalia</h3>
@@ -51,8 +51,8 @@
 					</p>
 				</div>
 				<div class="box">
-					<span class="image featured"><a href="/assets/css/images/alta-1.jpg" target="_blank"><img
-								src="/assets/css/images/alta-1.jpg" alt="" />
+					<span class="image featured"><a href="images/alta-1.jpg" target="_blank"><img
+								src="images/alta-1.jpg" alt="" />
 						</a>
 					</span>
 
@@ -63,8 +63,8 @@
 					</p>
 				</div>
 				<div class="box">
-					<span class="image featured"><a href="/assets/css/images/alta-2.jpg" target="_blank"><img
-								src="/assets/css/images/alta-2.jpg" alt="" /></a></span>
+					<span class="image featured"><a href="images/alta-2.jpg" target="_blank"><img
+								src="images/alta-2.jpg" alt="" /></a></span>
 					<h3>Alta 2</h3>
 					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
 						non
@@ -72,8 +72,8 @@
 					</p>
 				</div>
 				<div class="box">
-					<span class="image featured"><a href="/assets/css/images/alta-3.jpg" target="_blank"><img
-								src="/assets/css/images/alta-3.jpg" alt="" /></a></span>
+					<span class="image featured"><a href="images/alta-3.jpg" target="_blank"><img
+								src="images/alta-3.jpg" alt="" /></a></span>
 					<h3>Alta 3</h3>
 					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
 						non
@@ -81,8 +81,8 @@
 					</p>
 				</div>
 				<div class="box">
-					<span class="image featured"><a href="/assets/css/images/alta-4.jpg" target="_blank"><img
-								src="/assets/css/images/alta-4.jpg" alt="" />
+					<span class="image featured"><a href="images/alta-4.jpg" target="_blank"><img
+								src="images/alta-4.jpg" alt="" />
 						</a>
 					</span>
 					<h3>Alta 4</h3>
@@ -92,8 +92,8 @@
 					</p>
 				</div>
 				<div class="box">
-					<span class="image featured"><a href="/assets/css/images/alta-5.jpg" target="_blank"><img
-								src="/assets/css/images/alta-5.jpg" alt="" /></a></span>
+					<span class="image featured"><a href="images/alta-5.jpg" target="_blank"><img
+								src="images/alta-5.jpg" alt="" /></a></span>
 					<h3>Alta 5</h3>
 					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
 						non
