--- a/saintJames.html
+++ b/saintJames.html
@@ -19,7 +19,7 @@
 		<!-- Header -->
 		<header id="header" class="alt">
 			<div class="logo">
-				<h1><a href="/index.html"><img class="logo-img" src="/assets/css/images/logo.png" alt=""></a></h1>
+				<h1><a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a></h1>
 
 				<nav id="nav">
 					<ul>
@@ -40,8 +40,8 @@
 			</header>
 			<div class="flex-box">
 				<div class="box">
-					<span class="image featured"><a href="/assets/css/images/saintJames.jpg" target="_blank"><img
-						src="/assets/css/images/saintJames.jpg" alt="" /></a></span>
+					<span class="image featured"><a href="images/saintJames.jpg" target="_blank"><img
+						src="images/saintJames.jpg" alt="" /></a></span>
 					<h3>Fachada Saint James</h3>
 					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
 						non
