--- a/index.html
+++ b/index.html
@@ -41,13 +41,16 @@
 			<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="images/Blue-And-Green-Galaxy-With-Stars.jpg" class="d-block w-100" alt="...">
+						<!-- <img src="images/Blue-And-Green-Galaxy-With-Stars.jpg" class="d-block w-100" alt="..."> -->
+						<img src="images/alta-1.jpg" class="d-block w-100" alt="...">
 					</div>
 					<div class="carousel-item">
-						<img src="images/Learning-How-To-Do-Flatlays.jpg" class="d-block w-100" alt="...">
+						<!-- <img src="images/Learning-How-To-Do-Flatlays.jpg" class="d-block w-100" alt="..."> -->
+						<img src="images/alta-2.jpg" class="d-block w-100" alt="...">
 					</div>
 					<div class="carousel-item">
-						<img src="images/Painted-Skies.jpg" class="d-block w-100" alt="...">
+						<!-- <img src="images/Painted-Skies.jpg" class="d-block w-100" alt="..."> -->
+						<img src="images/alta-3.jpg" class="d-block w-100" alt="...">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
