Fix navbar, add dropdown and pages

--- a/resSerraAlta.html
+++ b/resSerraAlta.html
@@ -19,14 +19,38 @@
 		<!-- Header -->
 		<header id="header" class="alt">
 			<div class="logo">
-				<h1><a href="index.html"><img class="logo-img" src="images/logo.png" alt=""></a></h1>
+				<h1><a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a></h1>
 
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="ednatalia.html">Ed Natalia</a></li>
-						<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-						<li><a href="saintJames.html">Saint James</a></li>
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="sobrenos.html">SOBRE NÓS </a></li>
+						<li>
+							<a href="#">PORTFÓLIO</a>
+							<ul>
+								<li><a href="ednatalia.html">Ed Natalia</a></li>
+								<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
+								<li><a href="saintJames.html">Saint James</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="#">BREVE LANÇAMENTO</a>
+							<ul>
+								<!-- <li><a href="index.html">Home</a></li> -->
+								<li><a href="ednatalia.html">Ed Natalia</a></li>
+								<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
+								<li><a href="saintJames.html">Saint James</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="#">EM CONSTRUCAO</a>
+							<ul>
+								<!-- <li><a href="index.html">Home</a></li> -->
+								<li><a href="ednatalia.html">Ed Natalia</a></li>
+								<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
+								<li><a href="saintJames.html">Saint James</a></li>
+							</ul>
+						</li>
 					</ul>
 				</nav>
 			</div>
