--- a/index.html
+++ b/index.html
@@ -20,75 +20,80 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<div class="logo">
-				<h1><a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a></h1>
+		<!-- <div class="logo"> -->
+		<nav class="nav" id="nav">
 
-				<nav id="nav">
+			<ul class="nav justify-content-center">
+				<li>
+					<a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a>
+				</li>
+
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="sobrenos.html">SOBRE NÓS </a></li>
+				<li>
+					<a href="#">PORTFÓLIO</a>
 					<ul>
-						<li><a href="index.html">HOME</a></li>
-						<li><a href="sobrenos.html">SOBRE NÓS </a></li>
-						<li>
-							<a href="#">PORTFÓLIO</a>
-							<ul>
-								<li><a href="ednatalia.html">Ed Natalia</a></li>
-								<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-								<li><a href="saintJames.html">Saint James</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="#">BREVE LANÇAMENTO</a>
-							<ul>
-								<!-- <li><a href="index.html">Home</a></li> -->
-								<li><a href="ednatalia.html">Ed Natalia</a></li>
-								<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-								<li><a href="saintJames.html">Saint James</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="#">EM CONSTRUCAO</a>
-							<ul>
-								<!-- <li><a href="index.html">Home</a></li> -->
-								<li><a href="ednatalia.html">Ed Natalia</a></li>
-								<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-								<li><a href="saintJames.html">Saint James</a></li>
-							</ul>
-						</li>
+						<li><a href="ednatalia.html">Ed Natalia</a></li>
+						<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
+						<li><a href="saintJames.html">Saint James</a></li>
 					</ul>
-				</nav>
-			</div>
+				</li>
+				<li>
+					<a href="#">BREVE LANÇAMENTO</a>
+					<ul>
+						<!-- <li><a href="index.html">Home</a></li> -->
+						<li><a href="ednatalia.html">Ed Natalia</a></li>
+						<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
+						<li><a href="saintJames.html">Saint James</a></li>
+					</ul>
+				</li>
+				<li>
+					<a href="#">EM CONSTRUCAO</a>
+					<ul>
+						<!-- <li><a href="index.html">Home</a></li> -->
+						<li><a href="ednatalia.html">Ed Natalia</a></li>
+						<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
+						<li><a href="saintJames.html">Saint James</a></li>
+					</ul>
+				</li>
+			</ul>
+		</nav>
+		<!-- </div> -->
 		</header>
 		<!-- END CAROUSEL -->
 
 		<!-- Banner -->
-		<section id="banner">
-			<!-- CAROUSEL -->
-			<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<!-- <img src="images/Blue-And-Green-Galaxy-With-Stars.jpg" class="d-block w-100" alt="..."> -->
-						<img src="images/alta-1.jpg" class="d-block w-100" alt="...">
+		<div class="box">
+			<section id="banner">
+				<!-- CAROUSEL -->
+				<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<!-- <img src="images/Blue-And-Green-Galaxy-With-Stars.jpg" class="d-block w-100" alt="..."> -->
+							<img src="images/saintJames.jpg" class="d-block w-100" alt="...">
+						</div>
+						<div class="carousel-item">
+							<!-- <img src="images/Learning-How-To-Do-Flatlays.jpg" class="d-block w-100" alt="..."> -->
+							<img src="images/alta-2.jpg" class="d-block w-100" alt="...">
+						</div>
+						<div class="carousel-item">
+							<!-- <img src="images/Painted-Skies.jpg" class="d-block w-100" alt="..."> -->
+							<img src="images/alta-3.jpg" class="d-block w-100" alt="...">
+						</div>
 					</div>
-					<div class="carousel-item">
-						<!-- <img src="images/Learning-How-To-Do-Flatlays.jpg" class="d-block w-100" alt="..."> -->
-						<img src="images/alta-2.jpg" class="d-block w-100" alt="...">
-					</div>
-					<div class="carousel-item">
-						<!-- <img src="images/Painted-Skies.jpg" class="d-block w-100" alt="..."> -->
-						<img src="images/alta-3.jpg" class="d-block w-100" alt="...">
-					</div>
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+						data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+						data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Next</span>
+					</button>
 				</div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-					data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
-				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-					data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
-				</button>
-			</div>
-		</section>
+			</section>
+		</div>
 
 		<!-- Main -->
 
