--- a/ednatalia.html
+++ b/ednatalia.html
@@ -11,6 +11,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body class="is-preload">
@@ -18,44 +20,47 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<div class="logo">
-				<h1><a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a></h1>
+			<!-- <div class="logo"> -->
+			<nav class="nav" id="nav">
 
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">HOME</a></li>
-						<li><a href="sobrenos.html">SOBRE NÓS </a></li>
-						<li>
-							<a href="#">PORTFÓLIO</a>
-							<ul>
-								<li><a href="ednatalia.html">Ed Natalia</a></li>
-								<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-								<li><a href="saintJames.html">Saint James</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="#">BREVE LANÇAMENTO</a>
-							<ul>
-								<!-- <li><a href="index.html">Home</a></li> -->
-								<li><a href="ednatalia.html">Ed Natalia</a></li>
-								<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-								<li><a href="saintJames.html">Saint James</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="#">EM CONSTRUCAO</a>
-							<ul>
-								<!-- <li><a href="index.html">Home</a></li> -->
-								<li><a href="ednatalia.html">Ed Natalia</a></li>
-								<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-								<li><a href="saintJames.html">Saint James</a></li>
-							</ul>
-						</li>
-					</ul>
-				</nav>
-			</div>
+				<ul class="nav justify-content-center">
+					<li>
+						<a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a>
+					</li>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="sobrenos.html">SOBRE NÓS </a></li>
+					<li>
+						<a href="#">PORTFÓLIO</a>
+						<ul>
+							<li><a href="ednatalia.html">Ed Natalia</a></li>
+							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
+							<li><a href="saintJames.html">Saint James</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">BREVE LANÇAMENTO</a>
+						<ul>
+							<!-- <li><a href="index.html">Home</a></li> -->
+							<li><a href="ednatalia.html">Ed Natalia</a></li>
+							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
+							<li><a href="saintJames.html">Saint James</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">EM CONSTRUCAO</a>
+						<ul>
+							<!-- <li><a href="index.html">Home</a></li> -->
+							<li><a href="ednatalia.html">Ed Natalia</a></li>
+							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
+							<li><a href="saintJames.html">Saint James</a></li>
+						</ul>
+					</li>
+				</ul>
+			</nav>
+			<!-- </div> -->
 		</header>
 
+		<div class="box">
 		<!-- Main -->
 		<section id="main" class="container">
 			<header>
@@ -126,6 +131,7 @@
 				</div>
 			</div>
 		</section>
+	</div>
 
 		<!-- Footer -->
 		<footer id="footer">
