Fix nav link bar pages

--- a/resSerraAlta.html
+++ b/resSerraAlta.html
@@ -10,7 +10,9 @@
 	<title>Contact Tecbos</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body class="is-preload">
@@ -18,68 +20,68 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<div class="logo">
-				<h1><a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a></h1>
+			<nav class="nav" id="nav">
+				<ul>
+					<li>
+						<a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a>
+					</li>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="sobrenos.html">SOBRE NÓS </a></li>
+					<li>
+						<a href="#">PORTFÓLIO</a>
+						<ul>
+							<li><a href="ednatalia.html">Ed Natalia</a></li>
+							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
+							<li><a href="saintJames.html">Saint James</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">BREVE LANÇAMENTO</a>
+						<ul>
+							<!-- <li><a href="index.html">Home</a></li> -->
+							<li><a href="ednatalia.html">Ed Natalia</a></li>
+							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
+							<li><a href="saintJames.html">Saint James</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">EM CONSTRUCAO</a>
+						<ul>
+							<!-- <li><a href="index.html">Home</a></li> -->
+							<li><a href="ednatalia.html">Ed Natalia</a></li>
+							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
+							<li><a href="saintJames.html">Saint James</a></li>
+						</ul>
+					</li>
+				</ul>
+			</nav>
+	</div>
+	</header>
 
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">HOME</a></li>
-						<li><a href="sobrenos.html">SOBRE NÓS </a></li>
-						<li>
-							<a href="#">PORTFÓLIO</a>
-							<ul>
-								<li><a href="ednatalia.html">Ed Natalia</a></li>
-								<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-								<li><a href="saintJames.html">Saint James</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="#">BREVE LANÇAMENTO</a>
-							<ul>
-								<!-- <li><a href="index.html">Home</a></li> -->
-								<li><a href="ednatalia.html">Ed Natalia</a></li>
-								<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-								<li><a href="saintJames.html">Saint James</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="#">EM CONSTRUCAO</a>
-							<ul>
-								<!-- <li><a href="index.html">Home</a></li> -->
-								<li><a href="ednatalia.html">Ed Natalia</a></li>
-								<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-								<li><a href="saintJames.html">Saint James</a></li>
-							</ul>
-						</li>
-					</ul>
-				</nav>
-			</div>
+	<!-- Main -->
+	<section id="main" class="container">
+		<header>
+			<h2>Res. Serra Alta</h2>
+			<p>A generic page for every non-generic situation.</p>
 		</header>
+		<div class="flex-box">
+			<div class="box">
+				<span class="image featured"><a href="images/resSerraAlta.jpg" target="_blank"><img
+							src="images/resSerraAlta.jpg" alt="" /></a></span>
+				<h3>Fachada Res. Serra Alta</h3>
+				<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
+					non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
+				</p>
+			</div>
+	</section>
 
-		<!-- Main -->
-		<section id="main" class="container">
-			<header>
-				<h2>Res. Serra Alta</h2>
-				<p>A generic page for every non-generic situation.</p>
-			</header>
-			<div class="flex-box">
-				<div class="box">
-					<span class="image featured"><a href="images/resSerraAlta.jpg" target="_blank"><img
-								src="images/resSerraAlta.jpg" alt="" /></a></span>
-					<h3>Fachada Res. Serra Alta</h3>
-					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
-						non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
-					</p>
-				</div>
-		</section>
-
-		<!-- Footer -->
-		<footer id="footer">
-			<ul class="copyright">
-				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="">GWS Tech</a></li>
-			</ul>
-		</footer>
+	<!-- Footer -->
+	<footer id="footer">
+		<ul class="copyright">
+			<li>&copy; Untitled. All rights reserved.</li>
+			<li>Design: <a href="">GWS Tech</a></li>
+		</ul>
+	</footer>
 
 	</div>
 
