--- a/saintJames.html
+++ b/saintJames.html
@@ -11,6 +11,10 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
 <body class="is-preload">
@@ -18,11 +22,11 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<div class="logo">
-				<h1><a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a></h1>
-
-				<nav id="nav">
-					<ul>
+			<nav class="nav" id="nav">
+				<ul class="nav justify-content-center">
+					<li>
+						<a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a>
+					</li>
 						<li><a href="index.html">HOME</a></li>
 						<li><a href="sobrenos.html">SOBRE NÓS </a></li>
 						<li>
