--- a/resSerraAlta.html
+++ b/resSerraAlta.html
@@ -23,7 +23,7 @@
 			<nav class="nav" id="nav">
 				<ul>
 					<li>
-						<a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a>
+						<a href="index.html"><img class="logo-img" src="images/logo.png" alt=""></a>
 					</li>
 					<li><a href="index.html">HOME</a></li>
 					<li><a href="sobrenos.html">SOBRE NÓS </a></li>
