--- a/ednatalia.html
+++ b/ednatalia.html
@@ -12,6 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"/>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -132,7 +133,7 @@
 			</div>
 		</section>
 	</div>
-
+	<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="copyright">
