--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
 			</nav>
 			<!-- </div> -->
 		</header>
-		
-<!-- CAROUSEL2 fIM CHANGE TEXT IMAGE -->
 
-		<div class="col-sm-7 mx-auto">
+		<!-- CAROUSEL2 START CHANGE TEXT IMAGE -->
+
+		<!-- <div class="col-sm-7 mx-auto carousel">
 			<header class="section-header text-center">
 				<span class="h1 d-block">
 					<span>❝</span>
 				</span>
-				<h2>Happy Customers</h2>
+				<h2>Customers</h2>
 			</header>
-		</div>
-		
+		</div> -->
+
 		<div id="flex-container" class="testimonials">
 			<div id="left-zone">
 				<ul class="list">
@@ -79,7 +79,8 @@
 						<div class="content-test content_testimonial-1">
 							<span class="picto"></span>
 							<h1>Diamond Pest Elimination</h1>
-							<p>“The team really takes pride in their work. If I didn’t know any better I would think they actually worked for my company.”</p>
+							<p>“The team really takes pride in their work. If I didn’t know any better I would think they actually
+								worked for my company.”</p>
 							<p class="testimonialFrom">Bill, Owner</p>
 							<p class="testimonialState">Rochester, NY</p>
 						</div>
@@ -90,7 +91,8 @@
 						<div class="content-test content_testimonial-2">
 							<span class="picto"></span>
 							<h1>A+ Handyman Service</h1>
-							<p>“Quite simply… the service offers prompt response time to my visitors and helps me to better know what type of project a potential customer wants.”</p>
+							<p>“Quite simply… the service offers prompt response time to my visitors and helps me to better know what
+								type of project a potential customer wants.”</p>
 							<p class="testimonialFrom">Bill, Owner</p>
 							<p class="testimonialState">Tucson, AZ</p>
 							<br>
@@ -102,7 +104,8 @@
 						<div class="content-test content_testimonial-3">
 							<span class="picto"></span>
 							<h1>Mod Movers</h1>
-							<p>“I couldn’t believe it. I actually had to hire someone to help me keep up with the new business. I had no idea my website had so much value.”</p>
+							<p>“I couldn’t believe it. I actually had to hire someone to help me keep up with the new business. I had
+								no idea my website had so much value.”</p>
 							<p class="testimonialFrom">Marlene, Owner</p>
 							<p class="testimonialState">Monterey, CA</p>
 						</div>
@@ -113,7 +116,8 @@
 						<div class="content-test content_testimonial-4">
 							<span class="picto"></span>
 							<h1>AK Pest Control</h1>
-							<p>Great company to send leads. Very efficient and pleased with the services. We get lots of leads and that whats important. Support is also great from the managers/support. Thanks YPC Chat</p>
+							<p>Great company to send leads. Very efficient and pleased with the services. We get lots of leads and
+								that whats important. Support is also great from the managers/support. Thanks YPC Chat</p>
 							<p class="testimonialFrom">Mark, Owner</p>
 							<p class="testimonialState">Somerset, VA</p>
 							<br>
@@ -123,105 +127,45 @@
 			</div>
 			<div id="right-zone"></div>
 		</div>
-<!-- CAROUSEL2 fIM CHANGE TEXT IMAGE -->
+		<!-- CAROUSEL2 FIM CHANGE TEXT IMAGE -->
 
 
+	
 
+	<!-- Main -->
 
+	<section class="box special features">
 
-		<!-- CAROUSEL CHANGE TEXT IMAGE -->
-		<div class="carousel">
-			<div class="slides">
-				<img src="https://i.loli.net/2020/01/20/2wx8npJFiDUzu4T.png" alt="Stainless Steel" />
-				<img src="https://i.loli.net/2020/01/20/YWA6RhCcESgN3Ty.png" alt="Army Green" />
-				<img src="https://i.loli.net/2020/01/19/4HaLyI7NQRf3teO.png" alt="Cranberry" />
-				<img src="https://i.loli.net/2020/01/19/QVY6JSEbqiOvAp1.png" alt="Midnight Blue" />
-			</div>
-			<div class="overlays">
-				<div class="bar" style="--bar-color: #bdc3c7;"></div>
-				<div class="bar" style="--bar-color: #218c74;"></div>
-				<div class="bar" style="--bar-color: #dd6b7b;"></div>
-				<div class="bar" style="--bar-color: #30465c;"></div>
-			</div>
-			<ul class="nav-links">
-				<li><a href="#" class="nav-link">Stainless Steel</a></li>
-				<li><a href="#" class="nav-link">Army Green</a></li>
-				<li><a href="#" class="nav-link">Cranberry</a></li>
-				<li><a href="#" class="nav-link">Midnight Blue</a></li>
-			</ul>
-		</div>
-		<!-- FIM CAROUSEL CHANGE TEXT IMAGE -->
-
-
-
-		<!-- Banner -->
 		<div class="box">
-			<section id="banner">
-				<!-- CAROUSEL -->
-				<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<!-- <img src="images/Blue-And-Green-Galaxy-With-Stars.jpg" class="d-block w-100" alt="..."> -->
-							<img src="images/saintJames.jpg" class="d-block w-100" alt="...">
-						</div>
-						<div class="carousel-item">
-							<!-- <img src="images/Learning-How-To-Do-Flatlays.jpg" class="d-block w-100" alt="..."> -->
-							<img src="images/alta-2.jpg" class="d-block w-100" alt="...">
-						</div>
-						<div class="carousel-item">
-							<!-- <img src="images/Painted-Skies.jpg" class="d-block w-100" alt="..."> -->
-							<img src="images/alta-3.jpg" class="d-block w-100" alt="...">
-						</div>
-					</div>
-					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-						data-bs-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="visually-hidden">Previous</span>
-					</button>
-					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-						data-bs-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="visually-hidden">Next</span>
-					</button>
+			<span class="image featured"><img src="images/Painted-Skies.jpg" alt="" /></span>
+			<h3>This is a subheading</h3>
+			<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non
+				blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet
+				interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante
+				accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan
+				tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan
+				adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis
+				praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu
+				aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.
+			</p>
+			<div class="row">
+				<div class="row-6 row-12-mobilep">
+					<h3>And now a subheading</h3>
+					<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc
+						integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim
+						laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis
+						praesent.</p>
 				</div>
-				<!-- END CAROUSEL -->
-			</section>
-		</div>
-
-		<!-- Main -->
-
-		<section class="box special features">
-
-			<div class="box">
-				<span class="image featured"><img src="images/Painted-Skies.jpg" alt="" /></span>
-				<h3>This is a subheading</h3>
-				<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non
-					blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet
-					interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante
-					accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan
-					tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan
-					adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis
-					praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu
-					aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.
-				</p>
-				<div class="row">
-					<div class="row-6 row-12-mobilep">
-						<h3>And now a subheading</h3>
-						<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc
-							integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim
-							laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis
-							praesent.</p>
-					</div>
-					<div class="row-6 row-12-mobilep">
-						<h3>And another subheading</h3>
-						<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc
-							integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim
-							laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis
-							praesent.</p>
-					</div>
+				<div class="row-6 row-12-mobilep">
+					<h3>And another subheading</h3>
+					<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc
+						integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim
+						laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis
+						praesent.</p>
 				</div>
 			</div>
-			<!-- <div class="features-row">
+		</div>
+		<!-- <div class="features-row">
 				<section>
 					<img src="/assets/images/Painted-Skies.jpg" alt="">
 					<span class="icon solid major fa-bolt accent2"></span>
@@ -230,16 +174,16 @@
 						iaculis accumsan dolore magna aliquam veroeros.</p>
 				</section>
 			</div> -->
-		</section>
-		<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
+	</section>
+	<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
 
-		<!-- Footer -->
-		<footer id="footer">
-			<ul class="copyright">
-				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="">GWS Tech</a></li>
-			</ul>
-		</footer>
+	<!-- Footer -->
+	<footer id="footer">
+		<ul class="copyright">
+			<li>&copy; Untitled. All rights reserved.</li>
+			<li>Design: <a href="">GWS Tech</a></li>
+		</ul>
+	</footer>
 
 	</div>
 
