--- a/index.html
+++ b/index.html
@@ -96,6 +96,42 @@
 
 		<!-- Main -->
 
+		<!-- START TESTIMONIALS-CAROUSEL -->
+		<div class="container testimonials">
+			<div class="testimonial">
+				<div class="testimonial-text">
+					<div class="user-text active-text">
+						<i class="fas fa-quote-left"></i>
+						<p>
+							I am a paragraph of active-text class
+						</p>
+						<span> I am a span inside of active-text</span>
+					</div>
+					<div class="user-text">
+						<p>I am a paragraph of user-text class which can i play</p>
+						<span> Span inside user-text class</span>
+					</div>
+					<div class="user-text">
+						<p>I am a paragraph of user-text class which can i play</p>
+						<span> Span inside user-text class</span>
+					</div>
+					<div class="user-text">
+						<p>I am a paragraph of user-text class which can i play</p>
+						<span> Span inside user-text class</span>
+					</div>
+				</div>
+				<div class="testimonial-pic">
+					<img src="images/pic01.jpg" class="user-pic active-pic" onclick="showReview();">
+					<img src="images/pic01.jpg" class="user-pic active" onclick="showReview();">
+					<img src="images/pic01.jpg" class="user-pic active" onclick="showReview();">
+					<img src="images/pic01.jpg" class="user-pic active" onclick="showReview();">
+				</div>
+			</div>
+		</div>
+		<!-- END TESTIMONIALS-CAROUSEL -->
+
+
+
 		<section class="box special features">
 
 			<div class="box">
@@ -157,5 +193,4 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
 </body>
