--- a/index.html
+++ b/index.html
@@ -95,75 +95,69 @@
 		</div>
 
 		<!-- Main -->
-
 		<!-- START TESTIMONIALS-CAROUSEL -->
-		<div class="container testimonials">
-			<div class="testimonial">
-				<div class="testimonial-text">
-					<div class="user-text active-text">
-						<i class="fas fa-quote-left"></i>
-						<p>
-							I am a paragraph of active-text class
-						</p>
-						<span> I am a span inside of active-text</span>
-					</div>
-					<div class="user-text">
-						<p>I am a paragraph of user-text class which can i play</p>
-						<span> Span inside user-text class</span>
-					</div>
-					<div class="user-text">
-						<p>I am a paragraph of user-text class which can i play</p>
-						<span> Span inside user-text class</span>
-					</div>
-					<div class="user-text">
-						<p>I am a paragraph of user-text class which can i play</p>
-						<span> Span inside user-text class</span>
-					</div>
+
+		<div id="authorContainer">
+			<div class="testimonial-container">
+				<div class="testimonial">
+					<img src="images/pic01.jpg" alt="John Doe Image" class="author-image">
+					<p class="author">John Doe</p>
 				</div>
-				<div class="testimonial-pic">
-					<img src="images/pic01.jpg" class="user-pic active-pic" onclick="showReview();">
-					<img src="images/pic01.jpg" class="user-pic active" onclick="showReview();">
-					<img src="images/pic01.jpg" class="user-pic active" onclick="showReview();">
-					<img src="images/pic01.jpg" class="user-pic active" onclick="showReview();">
+
+				<div class="testimonial">
+					<img src="images/Painted-Skies.jpg" alt="John Doe Image" class="author-image">
+
+					<p class="author">Jane Doe</p>
 				</div>
+				<!-- <img src="images/pic01.jpg" alt="John Doe Image" class="author-image"> -->
+			</div>
+			<div id="authorNames">
+				<!-- Nomes dos autores serão adicionados aqui dinamicamente -->
 			</div>
 		</div>
-		<!-- END TESTIMONIALS-CAROUSEL -->
+			
+
+			<!-- END TESTIMONIALS-CAROUSEL -->
 
 
 
-		<section class="box special features">
+			<section class="box special features">
 
-			<div class="box">
-				<span class="image featured"><img src="images/Painted-Skies.jpg" alt="" /></span>
-				<h3>This is a subheading</h3>
-				<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non
-					blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet
-					interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante
-					accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan
-					tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan
-					adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis
-					praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu
-					aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.
-				</p>
-				<div class="row">
-					<div class="row-6 row-12-mobilep">
-						<h3>And now a subheading</h3>
-						<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc
-							integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim
-							laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis
-							praesent.</p>
-					</div>
-					<div class="row-6 row-12-mobilep">
-						<h3>And another subheading</h3>
-						<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc
-							integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim
-							laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis
-							praesent.</p>
+				<div class="box">
+					<span class="image featured"><img src="images/Painted-Skies.jpg" alt="" /></span>
+					<h3>This is a subheading</h3>
+					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
+						non
+						blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet
+						interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit.
+						Ante
+						accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan
+						tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan
+						adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis
+						praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu
+						aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa
+						arcu.
+					</p>
+					<div class="row">
+						<div class="row-6 row-12-mobilep">
+							<h3>And now a subheading</h3>
+							<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc
+								integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim
+								laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio
+								vis
+								praesent.</p>
+						</div>
+						<div class="row-6 row-12-mobilep">
+							<h3>And another subheading</h3>
+							<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc
+								integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim
+								laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio
+								vis
+								praesent.</p>
+						</div>
 					</div>
 				</div>
-			</div>
-			<!-- <div class="features-row">
+				<!-- <div class="features-row">
 				<section>
 					<img src="/assets/images/Painted-Skies.jpg" alt="">
 					<span class="icon solid major fa-bolt accent2"></span>
@@ -172,25 +166,25 @@
 						iaculis accumsan dolore magna aliquam veroeros.</p>
 				</section>
 			</div> -->
-		</section>
-		<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
+			</section>
+			<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
 
-		<!-- Footer -->
-		<footer id="footer">
-			<ul class="copyright">
-				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="">GWS Tech</a></li>
-			</ul>
-		</footer>
+			<!-- Footer -->
+			<footer id="footer">
+				<ul class="copyright">
+					<li>&copy; Untitled. All rights reserved.</li>
+					<li>Design: <a href="">GWS Tech</a></li>
+				</ul>
+			</footer>
 
-	</div>
+		</div>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.dropotron.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.dropotron.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 </body>
