Fix buttons and hover color

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				</div>
 				<!-- <img src="images/pic01.jpg" alt="John Doe Image" class="author-image"> -->
 			</div>
-			<div id="authorNames">
+			<div id="authorNames" class="btn">
 				<!-- Nomes dos autores serão adicionados aqui dinamicamente -->
 			</div>
 		</div>
