--- a/resSerraAlta.html
+++ b/resSerraAlta.html
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -65,15 +65,59 @@
 			<h2>Res. Serra Alta</h2>
 			<p>A generic page for every non-generic situation.</p>
 		</header>
-		<div class="flex-box">
-			<div class="box">
-				<span class="image featured"><a href="images/resSerraAlta.jpg" target="_blank"><img
-							src="images/resSerraAlta.jpg" alt="" /></a></span>
-				<h3>Fachada Res. Serra Alta</h3>
-				<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
-					non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
-				</p>
+
+		<div class="cream-bg">
+			<div class="container">
+				<div class="row g-5 justify-content-center">
+					<div class="col-lg-6">
+						<div class="card">
+							<div class="row lg-0">
+								<div class="col-6 col-md-5">
+									<div class="col-6 col-md-12">
+										<span class="image featured "><a href="images/resSerraAlta.jpg" target="_blank"><img
+													src="images/resSerraAlta.jpg" class="card-img img-fluid rounded" alt="" /></a></span>
+									</div>
+									<div class="col-6 col-md-5">
+										<div class="card-body d-flex flex-column">
+											<div class="h-100">
+												<h3 class="card-title">Fachada Res. Serra Alta</h3>
+												<p class="card-title">
+													Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
+													non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
+												</p>
+											</div>
+										</div>
+								</div>
+								
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
+		</div>
+		<div class="flex-box">
+			<div class="col-6 col-md-12">
+				<span class="image featured "><a href="images/resSerraAlta.jpg" target="_blank"><img
+							src="images/resSerraAlta.jpg" class="car-img img-fluid rounded" alt="" /></a></span>
+			</div>
+			<div class="col-6 col-md-5">
+				<div class="card-body d-flex flex-column">
+					<div class="h-100">
+						<h3 class="card-title">Fachada Res. Serra Alta</h3>
+						<p class="card-title">
+							Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
+							non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
+						</p>
+					</div>
+				</div>
+				<!-- <p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
+								non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
+							</p>
+						</div> -->
+				<div class="box col-12">
+				</div>
+			</div>
+
 	</section>
 	<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
 	<!-- Footer -->
