Fixed cards of testimonials

--- a/index.html
+++ b/index.html
@@ -96,26 +96,53 @@
 
 		<!-- Main -->
 		<!-- START TESTIMONIALS-CAROUSEL -->
-
-		<div id="authorContainer">
-			<div class="testimonial-container">
-				<div class="testimonial">
-					<img src="images/pic01.jpg" alt="John Doe Image" class="author-image">
-					<div class="author-content"></div>
-					<p class="author">John Doe</p>
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="card testimonials">
+					<div class="card-body">
+						<div class="testimonial">
+							<img src="images/background-binary-code.jpg" alt="John Doe Image" class="author-image">
+							<div class="author-content"></div>
+							<p class="author">John Doe, Lorem, ipsum dolor sit amet</p>
+						</div>
+						<div class="testimonial">
+							<img src="images/background_horizontal.jpeg" alt="John Doe Image" class="author-image">
+							<div class="author-content"></div>
+							<p class="author">Jane Doe Lorem, ipsum dolor sit amet</p>
+						</div> 
+			
+					</div>
 				</div>
-
-				<div class="testimonial">
-					<img src="images/Painted-Skies.jpg" alt="John Doe Image" class="author-image">
-					<div class="author-content"></div>
-					<p class="author">Jane Doe</p>
-				</div>
-				<!-- <img src="images/pic01.jpg" alt="John Doe Image" class="author-image"> -->
 			</div>
-			<div id="authorNames" class="btn">
-				<!-- Nomes dos autores serão adicionados aqui dinamicamente -->
+			<div class="col-sm-6">
+				<div class="card w-75">
+					<div class="card-body">
+						<div id="authorNames">
+							<!-- Nomes dos autores serão adicionados aqui dinamicamente -->
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
+		
+		<!-- <div class="testimonial-container">
+			<div class="testimonial">
+				<img src="images/background-binary-code.jpg" alt="John Doe Image" class="author-image">
+				<div class="author-content"></div>
+				<p class="author">John Doe</p>
+			</div>
+
+			<div class="testimonial">
+				<img src="images/background_horizontal.jpeg" alt="John Doe Image" class="author-image">
+				<div class="author-content"></div>
+				<p class="author">Jane Doe</p>
+			</div> -->
+			<!-- <img src="images/pic01.jpg" alt="John Doe Image" class="author-image"> 
+		</div> -->
+		<!-- <div id="authorContainer" class="col-6">
+
+		</div> -->
+		
 
 
 		<!-- END TESTIMONIALS-CAROUSEL -->
@@ -177,7 +204,6 @@
 				<li>Design: <a href="">GWS Tech</a></li>
 			</ul>
 		</footer>
-
 	</div>
 
 	<!-- Scripts -->
