Fixed card on page

--- a/resSerraAlta.html
+++ b/resSerraAlta.html
@@ -74,8 +74,8 @@
 							<div class="row lg-0">
 								<div class="col-6 col-md-5">
 									<div class="col-6 col-md-12">
-										<span class="image featured "><a href="images/resSerraAlta.jpg" target="_blank"><img
-													src="images/resSerraAlta.jpg" class="card-img img-fluid rounded" alt="" /></a></span>
+										<span class="image featured ">
+											<a href="images/resSerraAlta.jpg" target="_blank"><img src="images/resSerraAlta.jpg" class="card-img img-fluid rounded" alt="" /></a></span>
 									</div>
 									<div class="col-6 col-md-5">
 										<div class="card-body d-flex flex-column">
