--- a/ednatalia.html
+++ b/ednatalia.html
@@ -68,70 +68,54 @@
 				<h2>Ed Natalia</h2>
 				<p>A generic page for every non-generic situation.</p>
 			</header>
-			<div class="flex-box">
-				<div class="box">
-					<span class="image featured"><a href="images/Edificio Natalia.jpg" target="_blank"><img
-								src="images/Edificio Natalia.jpg" alt="" />
-						</a>
-					</span>
-					<h3>Edificio Natalia</h3>
-					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
-						non
-						blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
-					</p>
-				</div>
-				<div class="box">
-					<span class="image featured"><a href="images/alta-1.jpg" target="_blank"><img
-								src="images/alta-1.jpg" alt="" />
-						</a>
-					</span>
-
-					<h3>Alta 1</h3>
-					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
-						non
-						blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
-					</p>
-				</div>
-				<div class="box">
-					<span class="image featured"><a href="images/alta-2.jpg" target="_blank"><img
-								src="images/alta-2.jpg" alt="" /></a></span>
-					<h3>Alta 2</h3>
-					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
-						non
-						blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
-					</p>
-				</div>
-				<div class="box">
-					<span class="image featured"><a href="images/alta-3.jpg" target="_blank"><img
-								src="images/alta-3.jpg" alt="" /></a></span>
-					<h3>Alta 3</h3>
-					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
-						non
-						blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
-					</p>
-				</div>
-				<div class="box">
-					<span class="image featured"><a href="images/alta-4.jpg" target="_blank"><img
-								src="images/alta-4.jpg" alt="" />
-						</a>
-					</span>
-					<h3>Alta 4</h3>
-					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
-						non
-						blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
-					</p>
-				</div>
-				<div class="box">
-					<span class="image featured"><a href="images/alta-5.jpg" target="_blank"><img
-								src="images/alta-5.jpg" alt="" /></a></span>
-					<h3>Alta 5</h3>
-					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
-						non
-						blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
-					</p>
+			<div class="card border-light mb-3" style="max-width: auto;">
+				<div class="row g-0 reverse">
+					<div class="col-md-6">
+						<a href="images/alta-1.jpg" target="_blank"><img src="images/alta-1.jpg" class="card-img img-fluid rounded" alt=""/></a>
+					</div>
+					<div class="col-md-6">
+						<div class="card-body">
+							<h5 class="card-title">Ed Natalia</h5>
+							<p class="card-text" style="text-align: justify;">
+								This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+							</p>
+							<p class="card-text" style="text-align: justify;">
+								This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+							</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
+
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="card testimonials">
+					<div class="card-body">
+						<div class="testimonial">
+							<img src="images/background-binary-code.jpg" alt="John Doe Image" class="author-image">
+							<div class="author-content"></div>
+							<p class="author">John Doe, Lorem, ipsum dolor sit amet</p>
+						</div>
+						<div class="testimonial">
+							<img src="images/background_horizontal.jpeg" alt="John Doe Image" class="author-image">
+							<div class="author-content"></div>
+							<p class="author">Jane Doe Lorem, ipsum dolor sit amet</p>
+						</div> 
+			
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6">
+				<div class="card w-75">
+					<div class="card-body">
+						<div id="authorNames">
+							<!-- Nomes dos autores serão adicionados aqui dinamicamente -->
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
 		<!-- Footer -->
